--- a/style.css
+++ b/style.css
@@ -69,6 +69,26 @@ img {
 	background: #fff200;
 }
 
+#map:hover .map-hover {
+	display: block;
+	opacity: 1;
+}
+
+.map-hover {
+  -webkit-transition: opacity .15s;
+  -moz-transition: opacity .15s;
+  -o-transition: opacity .15s;
+  transition: opacity .15s;
+ 	background: rgba(244, 244, 244, 0.9);
+	border: 4px solid #d64444;
+	border-radius: 15px;
+  left: 60px;
+  opacity: 0;
+  padding: 7px 14px;
+  position: absolute;
+  top: 185px;	
+}
+
 #second-floor {
   -webkit-animation: mymove .5s; /* Chrome, Safari, Opera */
   -webkit-animation-delay: 0; /* Chrome, Safari, Opera */
@@ -127,6 +147,56 @@ img {
 	margin-top: 15px;
 }
 
+#modal {
+  -webkit-animation: opacity-in 1s; /* Chrome, Safari, Opera */
+  -webkit-animation-delay: 0; /* Chrome, Safari, Opera */
+  animation: opacity-in 1s;
+  animation-delay: 0;
+	background: rgba(244,244,244,.9);
+	border: 5px solid #d64444;
+	border-radius: 26px 5px 50px 9px;
+	font-family: "Trebuchet MS","helvetica","sans-serif";
+  left: 0;
+  letter-spacing: 2px;
+  margin: 0 auto;
+  padding: 0 25px;
+  position: fixed;
+  right: 0;
+  text-align: justify;
+  top: 15%;
+  transform: rotate(3deg);
+  width: 33.3%;
+}
+
+#modal.remove {
+  display: none;
+}
+
+#close {
+  background: rgba(0, 0, 0, 0.6);
+  border: 3px solid #fff;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  line-height: 20px;
+  padding-left: 1px;
+  position: absolute;
+  right: -14px;
+  text-align: center;
+  top: -13px;
+  width: 20px;	
+}
+
+@-webkit-keyframes opacity-in {
+    from {opacity: 0}
+    to {opacity: 1}
+}
+@keyframes opacity-in {
+    from {opacity: 0}
+    to {opacity: 1}
+}
+
+
 
 @media screen and (min-width: 980px) {
 	body {
@@ -145,6 +215,14 @@ img {
 	#info {
 		height: 250px;
 		margin: 0 0 20px 265px;
+	}
+
+	#modal {
+	  top: 45%;
+	}
+
+	.map-hover {
+	  left: 215px;
 	}
 }
 
