--- a/style.css
+++ b/style.css
@@ -147,6 +147,19 @@ img {
 	margin-top: 15px;
 }
 
+#holder {
+	background: rgba(0,0,0,.1);
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+#holder.remove {
+	display: none;
+}
+
 #modal {
   -webkit-animation: opacity-in 1s; /* Chrome, Safari, Opera */
   -webkit-animation-delay: 0; /* Chrome, Safari, Opera */
@@ -160,16 +173,12 @@ img {
   letter-spacing: 2px;
   margin: 0 auto;
   padding: 0 25px;
-  position: fixed;
+  position: absolute;
   right: 0;
   text-align: justify;
   top: 15%;
   transform: rotate(3deg);
   width: 33.3%;
-}
-
-#modal.remove {
-  display: none;
 }
 
 #close {
