--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 	padding: 30px 0px;
 }
 
+body.whoa {
+	background: url('https://38.media.tumblr.com/fc7ed5f25d25fab3e753c570ff5f05ac/tumblr_miwu0rbwuB1rvq1cmo1_500.gif');
+}
+
 h1 {
 	border-bottom: 1px solid rgba(0,0,0,.3);
 	font-family: "Trebuchet MS","helvetica","sans-serif";
